k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-request-tool
  labels:
    app: http-request-tool
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: http-request-tool
